k8s/target_buffering_middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: target-buffering
spec:
  buffering:
    maxRequestBodyBytes: 0
