k8s/target_ratelimit_middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: target-ratelimit
spec:
  rateLimit:
    average: 15         # Maksimalno prosečno 15 zahteva u sekundi
    period: 1s
    burst: 10            # Maksimalan nalet u istom trenutku (10 zahteva)
    sourceCriterion:
      ipStrategy: {}
