k8s/detection.yaml

apiVersion: v1
kind: Service
metadata:
  name: detection
spec:
  selector:
    app: detection
  ports:
    - port: 8000
      targetPort: 8000
