k8s/mitigation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mitigation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mitigation
  template:
    metadata:
      labels:
        app: mitigation
    spec:
      serviceAccountName: mitigation   #  bez ovoga pod koristi default, koji nema dozvolu za patch
      containers:
        - name: mitigation
          image: mitigation:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: mitigation
spec:
  selector:
    app: mitigation
  ports:
    - port: 8001
      targetPort: 8001
