k8s/mobile_access.yaml
apiVersion: v1
kind: Service
metadata:
  name: mitigation-nodeport
spec:
  type: NodePort
  selector:
    app: mitigation
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30081

---

apiVersion: v1
kind: Service
metadata:
  name: notifier-nodeport
spec:
  type: NodePort
  selector:
    app: notifier
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30090
