k8s/target_ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: target
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-target-ratelimit@kubernetescrd
spec:
  ingressClassName: traefik # ingress controler, vec ugradjeno
  rules: 
    - host: target.local # pravilo se primenjuje ako je host header ovaj
      http:
        paths: 
          - path: / 
            pathType: Prefix # svaka ruta koja pocinje sa /
            backend: # kuda se prosledjuje
              service: # sve iz target.yaml
                name: target 
                port:
                  number: 80
